more java 8 downgrade